--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         img {
             <!--width: 25%-->
         }
-        
+
         h1 {
             text-align: center;
             font-family: Calibri, Arial, sans-serif
         }
-        
+
         h2 {
             font-family: Calibri, Arial, sans-serif
         }
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+    <input id='data' type="hidden" value="" />
     <div id='logo'>
         <a href='https://www.gmbs-consulting.com'><img src='cropped-logo-clear-small.png' /></a>
     </div>
