--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
     <h2>Select a state: </h2>
     <select id='states'></select>
-    <div class="chart-container" style="position: relative; width:90%; padding: 0 5% 0 5%">
+    <div id="linear-container" class="chart-container" style="position: relative; width:90%; padding: 0 5% 0 5%">
         <canvas id="coronavirus-linear"></canvas>
     </div>
     <hr>
-    <div class="chart-container" style="position: relative; width:90%; padding: 0 5% 0 5%">
+    <div id="log-container" class="chart-container" style="position: relative; width:90%; padding: 0 5% 0 5%">
         <canvas id="coronavirus-log"></canvas>
     </div>
     <script src="chartjs_block.js"></script>
