--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
     <div id="log-container" class="chart-container" style="position: relative; width:90%; padding: 0 5% 0 5%">
         <canvas id="coronavirus-log"></canvas>
     </div>
+    <hr>
+    <div id="percent-container" class="chart-container" style="position: relative; width:90%; padding: 0 5% 0 5%">
+        <canvas id="coronavirus-percent"></canvas>
+    </div>
     <script src="chartjs_block.js"></script>
     <script src="covid_chart.js"></script>
     <hr />
